[package]
name = "logdna-client"
version = "0.5.5"
authors = ["engineering@logdna.com"]
edition = "2018"
license = "MIT"
description = "wrapper around LogDNA's Ingest API"

[dependencies]
#error handling
thiserror = "1"

#io
bytes = "1"
hyper = { version = "0.14", features = ["client", "tcp", "http1"] }
tokio = "1"
http = "0.2"
async-compression = {version = "0.3", features = ["futures-io", "gzip"]}

# async
futures = "0.3"
async-trait = "0.1"
async-buf-pool =  { git= "https://github.com:/logdna/async-buf-pool-rs.git", branch="0.3.x", version = "0.3"}
pin-project = "1"

#tls
rustls = "0.19"
rustls-native-certs = "0.5"
hyper-rustls = "0.22"

#utils
log = "0.4"
time = "0.3"
derivative = "2"
smallvec = "1"
countme = "2"

#serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
utf-8 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
tokio-util = { version = "0.6", features = ["compat"] }
proptest = "0.10"
flate2 = "1.0"
serial_test = "0.5"
countme = { version = "2", features = ["enable"] }

[profile.release]
debug=true
